Latest developments: correcting overflow.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@
 
 /* BODY ****************************************************************** */
 html {
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 body {  
